--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cdbreact": "^1.5.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.25",
+    "navigate": "^0.3.6",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
